# LlamaCon-Backend

./: .gitignore  pyproject.toml
src/: main.py  modal_main.py
src/api/: __init__.py  save_item.py
src/core/: config.py  db.py  db_client.py  deps.py  helpers.py  models.py
src/templates/: base.html  index.html  item.html  profile.html  settings.html
src/web/: __init__.py  search.py
