[project]
name = "llamacon-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.13.0",
    "ipykernel>=6.29.5",
    "markdown>=3.8",
    "modal>=0.74.41",
    "pydantic-settings>=2.9.1",
    "supabase>=2.15.1",
    "tomli>=2.2.1",
]
